OpenRewrite講座_OpenRewriteでJavaのバージョンを自動移行してみよう_rewriteRun実行後